--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ LOAD_OSM_SCRIPTS = false;
 </script>
 </head>
 <body>
+<!-- test -->
 <script language="javascript">
 Dwr.Main(Dwr.PAGE_HOME);
 </script>
